# emoji-zoo

./: .gitignore  AGENTS.md  README.md  emoji_zoo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
tests/: test_emoji_zoo.py
