[project]
name = "emoji-zoo"
version = "0.1.0"
description = "Conway's Game of Life meets a living emoji ecosystem"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.28.1",
    "textual>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
